oicm-litellm-layer/deploy/prod/litellm-network-policy-to-adeo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-from-adeo-litellm
  namespace: adeo
spec:
  # All pods in the adeo namespace
  podSelector: {}

  policyTypes:
    - Ingress

  ingress:
    - from:
        # Any pod in adeo-litellm
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: adeo-litellm
